# QuizManagementSystem

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
db/: Coding.txt  cricket.txt  template.txt  topics.txt
include/: admin.h  manageQuiz.h  player.h  utility.h
src/: admin.cpp  manageQuiz.cpp  player.cpp  utility.cpp
